# NOTES

./: CMakeLists.txt
src/: mainwindow.cpp  mainwindow.h
src/data/: workspace.cpp  workspace.h
src/data/elements/: abstract_workspace_item.h  checkbox_item.cpp  checkbox_item.h  file_item.cpp  file_item.h  image_item.cpp  image_item.h  list_item.cpp  list_item.h  nested_workspace_item.cpp  nested_workspace_item.h  resizable_item.cpp  resizable_item.h  text_item.cpp  text_item.h  title_item.cpp  title_item.h
src/logic/: workspace_controller.cpp  workspace_controller.h
src/view/: editor_widget.cpp  editor_widget.h  left_panel.cpp  left_panel.h  main_widget.cpp  main_widget.h
